# iz2

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  README.md  cmake_install.cmake  init_array.c  init_array.h  iz2  main.c  parallel.c  parallel.h  run_tests  search.h  sequential.c  sequential.h  test  test.c  unit_tests.cpp  unit_tests_main.cpp  unit_tests_parallel.cpp  unit_tests_sequential.cpp
